{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 18,
  "lineage": "b315e810-c8d9-bf08-bb6b-5d1945e7bc0b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terra_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0eb56b60df2bb29cf",
            "owner_id": "015008725368",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-08d71a990301d5741"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0de1955f31a8ede70",
            "owner_id": "015008725368",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eb56b60df2bb29cf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publicRouteTable"
            },
            "vpc_id": "vpc-08d71a990301d5741"
          },
          "dependencies": [
            "aws_internet_gateway.terra_igw",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b573a11d2b390d9c",
            "route_table_id": "rtb-0de1955f31a8ede70",
            "subnet_id": "subnet-0a99fbf0dff882f8a"
          },
          "dependencies": [
            "aws_internet_gateway.terra_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7ca87a3aa7cd340",
            "route_table_id": "rtb-0de1955f31a8ede70",
            "subnet_id": "subnet-0de0f9921e5595e6c"
          },
          "dependencies": [
            "aws_internet_gateway.terra_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webservers",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:015008725368:security-group/sg-0f878b770bc792d1b",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f878b770bc792d1b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": null,
            "owner_id": "015008725368",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-08d71a990301d5741"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:015008725368:subnet/subnet-0a99fbf0dff882f8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.20.1.0/24",
            "id": "subnet-0a99fbf0dff882f8a",
            "map_public_ip_on_launch": false,
            "owner_id": "015008725368",
            "tags": {
              "Name": "Subnet-1"
            },
            "vpc_id": "vpc-08d71a990301d5741"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:015008725368:subnet/subnet-0de0f9921e5595e6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.20.2.0/24",
            "id": "subnet-0de0f9921e5595e6c",
            "map_public_ip_on_launch": false,
            "owner_id": "015008725368",
            "tags": {
              "Name": "Subnet-2"
            },
            "vpc_id": "vpc-08d71a990301d5741"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terra_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:015008725368:vpc/vpc-08d71a990301d5741",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0cb7f7a53441d7db4",
            "default_route_table_id": "rtb-0158b25675099e86a",
            "default_security_group_id": "sg-01e86c1189a2f64c4",
            "dhcp_options_id": "dopt-2a0a1942",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08d71a990301d5741",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0158b25675099e86a",
            "owner_id": "015008725368",
            "tags": {
              "Name": "TerraVPC"
            }
          }
        }
      ]
    }
  ]
}